tests/ui/g-route-controller-mismatch.stderr
error[E0277]: `g::route(left, right)` arms must start with the same controller self-send
 --> tests/ui/g-route-controller-mismatch.rs:7:22
  |
7 |     let _ = g::route(bad_arm, good_arm);
  |                      ^^^^^^^ route arms use different controller self-sends
  |
  = help: the trait `hibana::global::SameRouteController<StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<6>, ()>>, StepNil>>` is not implemented for `StepCons<SendStep<Role<2>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<5>, ()>>, StepNil>`
note: required by a bound in `route`
 --> src/global.rs
  |
  | pub const fn route<LeftSteps, RightSteps>(
  |              ----- required by a bound in this function
...
  |     LeftSteps: RouteArmHead + SameRouteController<RightSteps> + DistinctRouteLabels<RightSteps>,
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route`
